# daily-article-aggregator

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  USAGE.md  add_sources.py  ai_gate_test.py  config.yaml  docker-compose.yml  feeds.opml  fix_concurrency.py  fix_performance.py  main.py  merged_feeds.opml  migrate.py  performance_fix.patch  pyproject.toml  requirements.txt  run_pipeline.py  seed_sources.py  start_api.sh  verify_feeds.py  verify_production.py  verify_release.py
.spec/: api.md  data-model.md  deployment.md  design.md  model-routing.md  pipeline.md  requirements.md  review-checklist.md  source-catalog.md  tasks.md
config/: sources.json
data/: .gitkeep
docs/: ARCHITECTURE.md  REVIEW.md  TECH_DEBT_REVIEW.md  codegraph.md
migrations/: 001_init.sql  002_deep_analysis_runtime_columns.sql
reports/: filtered_feeds.opml
rss/: hn-top-blogs.opml
scripts/: .gitkeep  check_comment_policy.py  check_file.py  check_frontend_policy.py  check_migration_policy.py  db_stats.py  debug_push.py  evaluate_feeds.py  evaluate_new_opml.py  fix_missing_content.py  fix_test_file.py  full_test.py  init_knowledge_base.py  manual_push.py  merge_opml.py  quick_test.py  reset_push_status.py  run_qa_server.py  run_topic_aggregation.py  setup_bitable.py  sync_knowledge_base.py  sync_to_bitable.py  test_atum.py  test_feishu_push.py  write_sitemap_tests.py  write_test_file.py
src/: __init__.py  config.py  db.py  main.py  models.py  repository.py  scheduler.py
tests/: __init__.py  test_ai_analyzer.py  (+33 more)
(+193 files in other folders)
